--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,11 @@
 *.iml
 nodes/data_eth_0/geth
 nodes/data_eth_0/geth.ipc
+nodes/data_eth_0/keystore/UTC--*
 nodes/data_eth_0/history
 nodes/data_eth_1/geth
 nodes/data_eth_1/geth.ipc
+nodes/data_eth_1/keystore/UTC--*
 nodes/data_eth_1/history
 *.log
 *.log.*
